src/snapshots/zeek_language_server__complete__test__context_declaration_id.snap
---
source: src/complete.rs
expression: "complete(&db.0, CompletionParams\n{\n    text_document_position:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri),\n    Position::new(3, 10),), work_done_progress_params:\n    WorkDoneProgressParams::default(), partial_result_params:\n    PartialResultParams::default(), context: None,\n},)"
---
Some(
    Array(
        [],
    ),
)
