src/snapshots/zeek_language_server__complete__test__field_access-2.snap
---
source: src/complete.rs
expression: "complete(&db.0, CompletionParams\n{\n    context:\n    Some(CompletionContext\n    {\n        trigger_kind: CompletionTriggerKind::TRIGGER_CHARACTER,\n        trigger_character: Some(\"$\".into()),\n    },), ..params\n})"
---
Some(
    Array(
        [
            CompletionItem {
                label: "abc",
                label_details: None,
                kind: Some(
                    Field,
                ),
                detail: None,
                documentation: Some(
                    MarkupContent(
                        MarkupContent {
                            kind: Markdown,
                            value: "```zeek\n# In X\nabc: count;\n```",
                        },
                    ),
                ),
                deprecated: None,
                preselect: None,
                sort_text: None,
                filter_text: None,
                insert_text: None,
                insert_text_format: None,
                insert_text_mode: None,
                text_edit: None,
                additional_text_edits: None,
                command: None,
                commit_characters: None,
                data: None,
                tags: None,
            },
        ],
    ),
)
