src/snapshots/zeek_language_server__complete__test__field_access_partial.snap
---
source: src/complete.rs
expression: "complete(&db.0, CompletionParams { context: None, ..params })"
snapshot_kind: text
---
Some(
    Array(
        [
            CompletionItem {
                label: "abc",
                label_details: None,
                kind: Some(
                    Field,
                ),
                detail: None,
                documentation: Some(
                    MarkupContent(
                        MarkupContent {
                            kind: Markdown,
                            value: "```zeek\n# In X\nabc: count;\n```",
                        },
                    ),
                ),
                deprecated: None,
                preselect: None,
                sort_text: None,
                filter_text: None,
                insert_text: None,
                insert_text_format: None,
                insert_text_mode: None,
                text_edit: None,
                additional_text_edits: None,
                command: None,
                commit_characters: None,
                data: None,
                tags: None,
            },
        ],
    ),
)
